app: fix line height calculation for aligning blob file margin box
The FileMargin component needs a pixel line-height to compute the
vertical position of the def box. If this is incorrect, the def box is
not displayed horizontally adjacent to the def it's about; it is well
above or below it.

--- a/app/web_modules/sourcegraph/blob/styles/Blob.css
+++ b/app/web_modules/sourcegraph/blob/styles/Blob.css
@@ -10,6 +10,7 @@
 @value contentWidth 690px;
 @value marginWidth 290px;
 @value firstCodeLineTopPadding 16px;
+@value code-normal-line-height from typography;
 
 .normal { composes: code-normal from typography; }
 .large { composes: code-large from typography; }
@@ -98,7 +99,7 @@
 }
 .lineNumber:before {
 	content: attr(data-line);
-	line-height: codeLineHeight;
+	line-height: code-normal-line-height;
 }
 .selectedLineNumber {
 	composes: lineNumber;
@@ -159,7 +160,7 @@
 .placeholderWhitespace {
 	float: right;
 	background-color: white;
-	height: codeLineHeight;
+	height: code-normal-line-height;
 }
 .lineContentPlaceholder {
 	composes: pa0 from base;
