--- a/app/web_modules/sourcegraph/components/styles/_typography.css
+++ b/app/web_modules/sourcegraph/components/styles/_typography.css
@@ -47,9 +47,10 @@
 	line-height: 1.45;
 }
 
+@value code-normal-line-height 22px; /* used by JavaScript */
 .code-normal {
 	font-size: code-font-size-2;
-	line-height: 1.7;
+	line-height: code-normal-line-height;
 }
 
 .code-large {
